--- a/roles/jenkins-pipeline/tasks/seed-job.yml
+++ b/roles/jenkins-pipeline/tasks/seed-job.yml
@@ -17,6 +17,12 @@
     url: http://localhost:8080
     user: admin
 
+- name: Approve Seed Job
+  jenkins_script:
+    script: "{{ lookup('file', 'files/approve.groovy') }}"
+    user: admin
+    password: "{{ jenkins_admin_password }}"
+
 - name: Run seed job
   uri:
     user: admin
